force-app/main/default/objects/Transaction__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transactions (Account Name)</relationshipLabel>
    <relationshipName>Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>