force-app/main/default/objects/Transaction__c/fields/Add_Client_to_Home_Bot__c.field-meta.xml
<CustomField>
    <fullName>Add_Client_to_Home_Bot__c</fullName>
    <label>Add Client to Home Bot</label>
    <type>DateTime</type>
</CustomField>