force-app/main/default/objects/Transaction__c/fields/Add_Review_Contacts_in_LOS__c.field-meta.xml
<CustomField>
    <fullName>Add_Review_Contacts_in_LOS__c</fullName>
    <label>Add/Review Contacts in LOS</label>
    <type>Date</type>
</CustomField>