force-app/main/default/objects/Transaction__c/fields/Add_to_Closing_Queue__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Closing_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add to Closing Queue</label>
    <type>Checkbox</type>
</CustomField>