force-app/main/default/objects/Transaction__c/fields/Additional_Processor__c.field-meta.xml
<CustomField>
    <fullName>Additional_Processor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Processor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Transactions3</relationshipName>
    <type>Lookup</type>
</CustomField>