force-app/main/default/objects/Transaction__c/fields/Amount_Bank_Funded__c.field-meta.xml
<CustomField>
    <fullName>Amount_Bank_Funded__c</fullName>
    <label>Amount Funded by Bank</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>