force-app/main/default/objects/Transaction__c/fields/Amount_To_Be_Funded__c.field-meta.xml
<CustomField>
    <fullName>Amount_To_Be_Funded__c</fullName>
    <label>Amount To Be Funded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>