force-app/main/default/objects/Transaction__c/fields/Application_in__c.field-meta.xml
<CustomField>
    <fullName>Application_in__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application in</label>
    <type>Checkbox</type>
</CustomField>