force-app/main/default/objects/Transaction__c/fields/Appraisal_1_Ordered_Date__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_1_Ordered_Date__c</fullName>
    <label>Appraisal 1 Ordered Date</label>
    <type>Date</type>
</CustomField>