force-app/main/default/objects/Transaction__c/fields/Appraisal_2_Ordered_Date__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_2_Ordered_Date__c</fullName>
    <label>Appraisal 2 Ordered Date</label>
    <type>Date</type>
</CustomField>