force-app/main/default/objects/Transaction__c/fields/Appraisal__c.field-meta.xml
<CustomField>
    <fullName>Appraisal__c</fullName>
    <label>Appraisal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Needed</fullName>
            </value>
            <value>
                <fullName>PIW</fullName>
            </value>
            <value>
                <fullName>ACE + PDR/PDI</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>