force-app/main/default/objects/Transaction__c/fields/Appraisal_Back__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Back__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appraisal Back</label>
    <type>Checkbox</type>
</CustomField>