force-app/main/default/objects/Transaction__c/fields/Appraisal_Cost__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Cost__c</fullName>
    <label>Appraisal Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>