force-app/main/default/objects/Transaction__c/fields/Appraisal_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Ordered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appraisal Ordered</label>
    <type>Checkbox</type>
</CustomField>