force-app/main/default/objects/Transaction__c/fields/Appraisal_Ordered_Date_ValueLink__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Ordered_Date_ValueLink__c</fullName>
    <label>Appraisal Ordered Date</label>
    <type>DateTime</type>
</CustomField>