force-app/main/default/objects/Transaction__c/fields/Appraisal_Waiver__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Waiver__c</fullName>
    <label>Appraisal Waiver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>