force-app/main/default/objects/Transaction__c/fields/AriveId__c.field-meta.xml
<CustomField>
    <fullName>AriveId__c</fullName>
    <externalId>true</externalId>
    <label>AriveId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>