force-app/main/default/objects/Transaction__c/fields/ARM_Adjustment_Date_1st_TD__c.field-meta.xml
<CustomField>
    <fullName>ARM_Adjustment_Date_1st_TD__c</fullName>
    <label>ARM Adjustment Date</label>
    <type>Date</type>
</CustomField>