force-app/main/default/objects/Transaction__c/fields/AUS__c.field-meta.xml
<CustomField>
    <fullName>AUS__c</fullName>
    <label>AUS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>