force-app/main/default/objects/Transaction__c/fields/BAA_Phone__c.field-meta.xml
<CustomField>
    <fullName>BAA_Phone__c</fullName>
    <label>BAA Phone</label>
    <type>Phone</type>
</CustomField>