force-app/main/default/objects/Transaction__c/fields/Balancing_Istructions_OneDrive_Link__c.field-meta.xml
<CustomField>
    <fullName>Balancing_Istructions_OneDrive_Link__c</fullName>
    <label>Balancing Instructions OneDrive Link</label>
    <type>Url</type>
</CustomField>