force-app/main/default/objects/Transaction__c/fields/Bank_Funded__c.field-meta.xml
<CustomField>
    <fullName>Bank_Funded__c</fullName>
    <label>Bank Funded %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>