force-app/main/default/objects/Transaction__c/fields/Base_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Base_Loan_Amount__c</fullName>
    <label>Base Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>