force-app/main/default/objects/Transaction__c/fields/Borr_Email__c.field-meta.xml
<CustomField>
    <fullName>Borr_Email__c</fullName>
    <label>Borr Email</label>
    <type>Email</type>
</CustomField>