force-app/main/default/objects/Transaction__c/fields/Borrower_Consent_To_Esign__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Consent_To_Esign__c</fullName>
    <label>Borrower Consent To Esign</label>
    <type>Date</type>
</CustomField>