force-app/main/default/objects/Transaction__c/fields/Borrower_Email__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Email__c</fullName>
    <formula>Borrower_Name__r.PersonEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Borrower Email</label>
    <type>Text</type>
</CustomField>