force-app/main/default/objects/Transaction__c/fields/Borrower_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Home_Phone__c</fullName>
    <label>Borrower Home Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>