force-app/main/default/objects/Transaction__c/fields/Borrower_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Last_Name__c</fullName>
    <label>Borrower Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>