force-app/main/default/objects/Transaction__c/fields/Borrower_Link_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Link_Delivered__c</fullName>
    <label>Borrower Link Delivered</label>
    <type>Date</type>
</CustomField>