force-app/main/default/objects/Transaction__c/fields/Borrower_Name__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Borrower Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>