force-app/main/default/objects/Transaction__c/fields/Borrower_Signed_And_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Signed_And_Submitted__c</fullName>
    <label>Borrower Signed And Submitted</label>
    <type>Date</type>
</CustomField>