force-app/main/default/objects/Transaction__c/fields/Borrower_SSN__c.field-meta.xml
<CustomField>
    <fullName>Borrower_SSN__c</fullName>
    <label>Borrower SSN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>