force-app/main/default/objects/Transaction__c/fields/Borrowers_Phone__c.field-meta.xml
<CustomField>
    <fullName>Borrowers_Phone__c</fullName>
    <formula>Borrower_Name__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Borrowers Phone</label>
    <type>Text</type>
</CustomField>