force-app/main/default/objects/Transaction__c/fields/BPS__c.field-meta.xml
<CustomField>
    <fullName>BPS__c</fullName>
    <label>BPS</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>