force-app/main/default/objects/Transaction__c/fields/BPS_Verification_Completed__c.field-meta.xml
<CustomField>
    <fullName>BPS_Verification_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BPS Verification Completed</label>
    <type>Checkbox</type>
</CustomField>