force-app/main/default/objects/Transaction__c/fields/BPS_Verification_Completed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>BPS_Verification_Completed_Date_Time__c</fullName>
    <label>BPS Verification Completed Date Time</label>
    <type>DateTime</type>
</CustomField>