force-app/main/default/objects/Transaction__c/fields/BPS_Verified_By__c.field-meta.xml
<CustomField>
    <fullName>BPS_Verified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BPS Verified By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>BPSTransactionsVerified</relationshipName>
    <type>Lookup</type>
</CustomField>