force-app/main/default/objects/Transaction__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <defaultValue>&quot;Boca Raton&quot;</defaultValue>
    <label>Branch</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Boca Raton</fullName>
                <default>true</default>
                <label>Boca Raton</label>
            </value>
            <value>
                <fullName>Orlando</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>