force-app/main/default/objects/Transaction__c/fields/Broker_Check_Recieved__c.field-meta.xml
<CustomField>
    <fullName>Broker_Check_Recieved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Broker Check Recieved</label>
    <type>Checkbox</type>
</CustomField>