force-app/main/default/objects/Transaction__c/fields/Broker_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Broker_Compensation__c</fullName>
    <label>Broker Compensation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>