force-app/main/default/objects/Transaction__c/fields/Business_Day_Before_Closing__c.field-meta.xml
<CustomField>
    <fullName>Business_Day_Before_Closing__c</fullName>
    <label>Business Day Before Closing</label>
    <type>Date</type>
</CustomField>