force-app/main/default/objects/Transaction__c/fields/Business_Day_Before_Funding__c.field-meta.xml
<CustomField>
    <fullName>Business_Day_Before_Funding__c</fullName>
    <label>Business Day Before Funding</label>
    <type>Date</type>
</CustomField>