force-app/main/default/objects/Transaction__c/fields/Business_Days_From_Submitted_to_Approved__c.field-meta.xml
<CustomField>
    <fullName>Business_Days_From_Submitted_to_Approved__c</fullName>
    <label>Business Days From Submitted to Approved</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>