force-app/main/default/objects/Transaction__c/fields/BusinessHours_From_Submitted_to_Approved__c.field-meta.xml
<CustomField>
    <fullName>BusinessHours_From_Submitted_to_Approved__c</fullName>
    <label>BusinessHours From Submitted to Approved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>