force-app/main/default/objects/Transaction__c/fields/Buydown__c.field-meta.xml
<CustomField>
    <fullName>Buydown__c</fullName>
    <label>Buydown</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-0</fullName>
            </value>
            <value>
                <fullName>1-1</fullName>
            </value>
            <value>
                <fullName>2-1</fullName>
            </value>
            <value>
                <fullName>3-2-1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>