force-app/main/default/objects/Transaction__c/fields/Buydown_Alias__c.field-meta.xml
<CustomField>
    <fullName>Buydown_Alias__c</fullName>
    <label>Buydown Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>