force-app/main/default/objects/Transaction__c/fields/Buydown_Check_Received__c.field-meta.xml
<CustomField>
    <fullName>Buydown_Check_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buydown Check Received</label>
    <type>Checkbox</type>
</CustomField>