force-app/main/default/objects/Transaction__c/fields/Buydown_Description__c.field-meta.xml
<CustomField>
    <fullName>Buydown_Description__c</fullName>
    <label>Buydown Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>