force-app/main/default/objects/Transaction__c/fields/Buyer_Pays_All_Transfer_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Pays_All_Transfer_Taxes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buyer Pays All Transfer Taxes</label>
    <type>Checkbox</type>
</CustomField>