force-app/main/default/objects/Transaction__c/fields/Buying_Agent_Assistant__c.field-meta.xml
<CustomField>
    <fullName>Buying_Agent_Assistant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buying Agent TC</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transactions (Buying Agent Assistant)</relationshipLabel>
    <relationshipName>Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>