force-app/main/default/objects/Transaction__c/fields/Buying_Agent_TC_Email__c.field-meta.xml
<CustomField>
    <fullName>Buying_Agent_TC_Email__c</fullName>
    <formula>Buying_Agent_Assistant__r.PersonEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buying Agent TC Email</label>
    <type>Text</type>
</CustomField>