force-app/main/default/objects/Transaction__c/fields/Call_Text_Due_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Call_Text_Due_Date_1__c</fullName>
    <description>Date that the processor must make the first call and text, once a Transaction is in CLA status and the intro email has been sent.</description>
    <label>Call/Text Due Date 1</label>
    <type>Date</type>
</CustomField>