force-app/main/default/objects/Transaction__c/fields/Cash_To_Close__c.field-meta.xml
<CustomField>
    <fullName>Cash_To_Close__c</fullName>
    <label>Cash To Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>