force-app/main/default/objects/Transaction__c/fields/Cash_To_Close_Available__c.field-meta.xml
<CustomField>
    <fullName>Cash_To_Close_Available__c</fullName>
    <label>Cash To Close Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>