force-app/main/default/objects/Transaction__c/fields/CD_Delivered__c.field-meta.xml
<CustomField>
    <fullName>CD_Delivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CD Delivered</label>
    <type>Checkbox</type>
</CustomField>