force-app/main/default/objects/Transaction__c/fields/CD_Is_Balanced__c.field-meta.xml
<CustomField>
    <fullName>CD_Is_Balanced__c</fullName>
    <label>CD Is Balanced</label>
    <type>Date</type>
</CustomField>