force-app/main/default/objects/Transaction__c/fields/CD_Request_by_Date__c.field-meta.xml
<CustomField>
    <fullName>CD_Request_by_Date__c</fullName>
    <label>CD Request by Date</label>
    <type>Date</type>
</CustomField>