force-app/main/default/objects/Transaction__c/fields/CD_Requested__c.field-meta.xml
<CustomField>
    <fullName>CD_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CD Requested</label>
    <type>Checkbox</type>
</CustomField>