force-app/main/default/objects/Transaction__c/fields/CD_Sent_By_Date__c.field-meta.xml
<CustomField>
    <fullName>CD_Sent_By_Date__c</fullName>
    <label>CD Sent By Date</label>
    <type>Date</type>
</CustomField>