force-app/main/default/objects/Transaction__c/fields/CD_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>CD_Signed_Date__c</fullName>
    <label>CD Signed Date</label>
    <type>Date</type>
</CustomField>