force-app/main/default/objects/Transaction__c/fields/CD_Signed_Flag__c.field-meta.xml
<CustomField>
    <fullName>CD_Signed_Flag__c</fullName>
    <label>CD Signed Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>