force-app/main/default/objects/Transaction__c/fields/Change_Alt_Contact_to_Processor__c.field-meta.xml
<CustomField>
    <fullName>Change_Alt_Contact_to_Processor__c</fullName>
    <label>Change Alt. Contact to Processor</label>
    <type>Date</type>
</CustomField>