force-app/main/default/objects/Transaction__c/fields/CLA_Docs_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>CLA_Docs_Due_Date__c</fullName>
    <description>Date that the docs are due from the client, once a Transaction is in CLA status and the processor has made contact with the client.</description>
    <label>CLA Docs Due Date</label>
    <type>Date</type>
</CustomField>