force-app/main/default/objects/Transaction__c/fields/Clear_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Clear_to_Close__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clear to Close</label>
    <type>Checkbox</type>
</CustomField>