force-app/main/default/objects/Transaction__c/fields/Clear_to_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Clear_to_Close_Date__c</fullName>
    <label>Clear to Close Date</label>
    <type>DateTime</type>
</CustomField>