force-app/main/default/objects/Transaction__c/fields/Closed__c.field-meta.xml
<CustomField>
    <fullName>Closed__c</fullName>
    <formula>IF(ISBLANK(Closing_Date__c), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed?</label>
    <type>Checkbox</type>
</CustomField>