force-app/main/default/objects/Transaction__c/fields/Closer_Action_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closer_Action_Reason__c</fullName>
    <formula>IF( TODAY() &gt;=   Two_Days_Before_Closing__c &amp;&amp; ISNULL( Closing_Package_Sent__c ), &quot;Send Closing Package; &quot;, &quot;&quot; ) +
IF(TODAY() =   Closing_Package_Sent__c &amp;&amp; ISPICKVAL(  Closing_Package_Status__c , &apos;&apos;) &amp;&amp; HOUR(TIMENOW() - 4) &gt; 14  ||   TODAY() &gt;  Closing_Package_Sent__c  &amp;&amp; ISPICKVAL(  Closing_Package_Status__c , &quot;&quot;) , &quot;Closing Package Not Dispositioned; &quot;, &quot;&quot; ) +
IF(ISPICKVAL( Closing_Package_Status__c , &quot;Rejected&quot;), &quot;Closing Package Rejected; &quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closer Action Reason</label>
    <type>Text</type>
</CustomField>