force-app/main/default/objects/Transaction__c/fields/Closer_Action_Required__c.field-meta.xml
<CustomField>
    <fullName>Closer_Action_Required__c</fullName>
    <formula>AND(
    NOT(ISPICKVAL(Status__c, &apos;Closed&apos;)),
    NOT(ISPICKVAL(Status__c, &apos;Cancelled&apos;)),
    NOT(ISPICKVAL(Status__c, &apos;Post-Closed&apos;)),
    NOT(ISPICKVAL(Status__c, &apos;Lost&apos;)),
OR(
   AND(
       TODAY() &gt;=  Two_Days_Before_Closing__c ,
       ISNULL( Closing_Package_Sent__c )
      ),
   ISPICKVAL(  Closing_Package_Status__c , &quot;Rejected&quot;),
   TODAY() = Closing_Package_Sent__c &amp;&amp; ISPICKVAL(  Closing_Package_Status__c , &quot;&quot;) &amp;&amp; HOUR(TIMENOW() - 4) &gt; 14,
   TODAY() &gt;  Closing_Package_Sent__c  &amp;&amp; ISPICKVAL(  Closing_Package_Status__c , &quot;&quot;)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closer Action Required</label>
    <type>Checkbox</type>
</CustomField>