force-app/main/default/objects/Transaction__c/fields/Closer_Note__c.field-meta.xml
<CustomField>
    <fullName>Closer_Note__c</fullName>
    <label>Closer Note</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>