force-app/main/default/objects/Transaction__c/fields/Closer_Note_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Closer_Note_Date_Time__c</fullName>
    <label>Closer Note Date/Time</label>
    <type>DateTime</type>
</CustomField>