force-app/main/default/objects/Transaction__c/fields/Closing_Instructions_Sent__c.field-meta.xml
<CustomField>
    <fullName>Closing_Instructions_Sent__c</fullName>
    <label>Balancing Instructions Sent</label>
    <type>Date</type>
</CustomField>