force-app/main/default/objects/Transaction__c/fields/Closing_Month__c.field-meta.xml
<CustomField>
    <fullName>Closing_Month__c</fullName>
    <formula>CASE(MONTH( Closing_Date__c ),
1,&quot;01-January&quot;, 
2, &quot;02-February&quot;,
3, &quot;03-March&quot;,
4, &quot;04-April&quot;,
5, &quot;05-May&quot;,
6, &quot;06-June&quot;,
7, &quot;07-July&quot;,
8, &quot;08-August&quot;,
9, &quot;09-September&quot;,
10, &quot;10-October&quot;,
11, &quot;11-November&quot;,
12, &quot;12-December&quot;,&quot;None&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closing Month</label>
    <type>Text</type>
</CustomField>