force-app/main/default/objects/Transaction__c/fields/Closing_Move_To_Docs__c.field-meta.xml
<CustomField>
    <fullName>Closing_Move_To_Docs__c</fullName>
    <label>Closing Move To Docs</label>
    <type>Date</type>
</CustomField>