force-app/main/default/objects/Transaction__c/fields/Closing_Package_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Closing_Package_Accepted__c</fullName>
    <label>Closing Package Accepted</label>
    <type>Date</type>
</CustomField>