force-app/main/default/objects/Transaction__c/fields/Closing_Package_One_Drive_Link__c.field-meta.xml
<CustomField>
    <fullName>Closing_Package_One_Drive_Link__c</fullName>
    <label>Closing Package One Drive Link</label>
    <type>Url</type>
</CustomField>