force-app/main/default/objects/Transaction__c/fields/Closing_Package_Rejection_Notes__c.field-meta.xml
<CustomField>
    <fullName>Closing_Package_Rejection_Notes__c</fullName>
    <label>Closing Package Rejection Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>