force-app/main/default/objects/Transaction__c/fields/Closing_Package_Sent__c.field-meta.xml
<CustomField>
    <fullName>Closing_Package_Sent__c</fullName>
    <label>Closing Package Sent</label>
    <type>Date</type>
</CustomField>