force-app/main/default/objects/Transaction__c/fields/Closing_Package_Status__c.field-meta.xml
<CustomField>
    <fullName>Closing_Package_Status__c</fullName>
    <label>Closing Package Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>