force-app/main/default/objects/Transaction__c/fields/Closing_Status_CLOSER_ONLY__c.field-meta.xml
<CustomField>
    <fullName>Closing_Status_CLOSER_ONLY__c</fullName>
    <label>Closing Status (CLOSER ONLY)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Queue</fullName>
            </value>
            <value>
                <fullName>Initial CD</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Closing</fullName>
            </value>
            <value>
                <fullName>Funded</fullName>
            </value>
            <value>
                <fullName>Post-Closing</fullName>
            </value>
            <value>
                <fullName>Complete (Won)</fullName>
            </value>
            <value>
                <fullName>Complete (Closed)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>